--- a/templates/collectivites.html
+++ b/templates/collectivites.html
@@ -3,7 +3,7 @@
 {% block description %}Pourquoi et comment les collectivités peuvent accompagner NIRD.{% endblock %}
 
 {% block content %}
-<h1>Collectivités</h1>
+<h2>Collectivités</h2>
 <p>
   Les collectivités (commune, département, région) sont déterminantes : elles assurent l’équipement,
   l’infrastructure et la maintenance, et peuvent faciliter l’intégration de postes Linux.
@@ -13,7 +13,7 @@
 Infos pratiques
 - Lecture : ~4 minutes
 - Photo : optionnelle (chargée uniquement sur clic)
-- Navigation : Tab / Shift+Tab + Alt+1..4 (selon navigateur)
+- Navigation : Tab / Shift+Tab + Alt+1..5 (selon navigateur)
 </pre>
 
 <h2>Sommaire</h2>
@@ -62,7 +62,7 @@ Infos pratiques
 <button class="media-link" type="button"
   data-target="img-don"
   data-src="{{ url_for('static', filename='media/don-pc-club-info.jpg') }}">
-  [MEDIA] Charger la photo (JPG, 190 KB)
+  [MEDIA] Charger la photo
 </button>
 
 <div id="img-don" class="media-container" aria-live="polite">
